# Ataque-Dicionario

./: CMakeLists.txt  Makefile  README.md
include/: abertura.h  criptografia.h  descriptografia.h  leitura.h  main.h  saida.h
src/: abertura.c  criptografia.c  descriptografia.c  leitura.c  main.c  saida.c
